# loudio

./: .gitignore  LICENSE  README.md  Task.md  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: create-release-on-version-bump.yml  release-artifacts.yml  ubuntu-deb.yml
app/: layout.tsx  page.tsx
app/components/: TranscriptionStudio.tsx
app/components/transcription-studio/: constants.ts  useRecordingHistoryController.ts  useTranscriptionController.ts  utils.ts
app/components/transcription-studio/components/: CompactToolbar.tsx  EulaGate.tsx  RecordingHistoryView.tsx  SettingsPanel.tsx  TranscriptPanel.tsx  WorkspaceActivityView.tsx
app/components/transcription-studio/hooks/: useDesktopMenuBindings.ts  useRecordingHistory.ts  useTranscriptWorkflow.ts
app/components/transcription-studio/utils/: audio.ts  format.ts  settings.ts  transcript.ts
app/lib/: defaults.ts  tauri.ts  types.ts
app/styles/: globals.css
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
